fix(docs): fix scroll jump in right nav bar

--- a/docs/src/components/css/style.css
+++ b/docs/src/components/css/style.css
@@ -99,3 +99,7 @@ table td {
 .inner-left-container {
   max-width: 888px;
 }
+
+.scroll-y {
+  overflow-y: scroll;
+}
